--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.1.3",
   "author": "Austin Green",
   "dependencies": {
+    "@palmabit/react-cookie-law": "^0.2.4",
     "bootstrap": "^4.3.1",
     "bulma": "^0.7.0",
     "gatsby": "^2.1.34",
