--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.3.1",
     "bulma": "^0.7.0",
     "gatsby": "^2.1.34",
+    "gatsby-cli": "^2.8.3",
     "gatsby-image": "^2.0.23",
     "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-netlify-cms": "^4.0.1",
